[tool.poetry]
name = "lovecraft"
version = "0.1.0"
description = "Converse with H.P. Lovecraft via Retrieval Augmented Generation."
authors = ["Russell Jurney <russell.jurney@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.11"
langchain-openai = "^0.0.8"
openai = "^1.13.3"
bs4 = "^0.0.2"
beautifulsoup4 = "^4.12.3"
streamlit = "^1.31.1"
scrapy = "^2.11.1"
lxml = "^5.1.0"
opensearch-py = "^2.4.2"
langchain-community = "^0.0.27"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pre-commit = "^3.6.2"
ipython = "^8.22.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
