[tool.poetry]
name = "lovecraft"
version = "0.1.0"
description = "Converse with H.P. Lovecraft via Retrieval Augmented Generation."
authors = ["Russell Jurney <russell.jurney@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "lovecraft"}]
keywords = [
    "lovecraft",
    "retrieval augmented generation",
    "rag",
    "openai",
    "gpt-4",
    "llm",
    "language model",
    "nlp",
    "natural language processing",
    "ai",
    "artificial intelligence",
    "conversational ai",
    "H.P. Lovecraft",
    "OpenSearch"
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Framework :: Flake8",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
include = ["LICENSE"]

[project]
name = "lovecraft"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.11"
langchain-openai = "^0.0.8"
openai = "^1.13.3"
bs4 = "^0.0.2"
beautifulsoup4 = "^4.12.3"
streamlit = "^1.31.1"
scrapy = "^2.11.1"
lxml = "^5.1.0"
opensearch-py = "^2.4.2"
langchain-community = "^0.0.27"
sentence-transformers = "^2.5.1"
langsmith = "^0.1.23"
langchainhub = "^0.1.15"
pypdf = "^4.1.0"
pillow = "^10.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pre-commit = "^3.6.2"
ipython = "^8.22.2"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]
include = ["graphlet", "test"]

[tool.isort]
profile = "black"
src_paths = ["graphlet", "test"]

[tool.mypy]
python_version = "3.10"
mypy_path = ["graphlet", "test"]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
